--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -6,9 +6,9 @@ build:
     python: "3.9"
 
 sphinx:
-   configuration: docs/source/conf.py
+   configuration: docs/conf.py
 
-python:
-   install:
-   - requirements: requirements.txt
-   - requirements: docs/requirements.txt
+# python:
+#    install:
+#    - requirements: requirements.txt
+#    - requirements: docs/requirements.txt
