--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -56,3 +56,6 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 urllib3==1.26.9
     # via requests
+
+sphinxcontrib-autoprogram
+sphinx-autodoc-typehints
