--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -57,5 +57,6 @@ sphinxcontrib-serializinghtml==1.1.5
 urllib3==1.26.9
     # via requests
 
+sphinx-git
 sphinxcontrib-autoprogram
 sphinx-autodoc-typehints
